practice questions changes